--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
+language: python
+python:
+  - "2.7"
+
 sudo: required
 
 services:
   - docker
 
 env:
-  - DOCKER_REPO_SLUG=activatedgeek/mesa
+  - DOCKER_REPO_SLUG=activatedgeek/opengl
 
 script:
   # build latest image always
